# pdf2fgu

./: .gitignore  .pylintrc  config.json  config2.json  config3.json  fgu.py  pdf2fgu.py  setup.cfg
src/fgu/: campaign.py  data.py  encounter.py  enums.py  formattedtext.py  pdfconverter.py  pdfconverter2.py
src/fgu2pdf/: config.py  logs.py
src/scripts/: pdf2fgu.py
