[metadata]
name = pdf2fgu
description = "convert adventure PDFs into Fantasy Grounds Unity campaigns"
version = 0.0.1

[options]
install_requires =
    click
    pymupdf
    dataclass_wizard
    coloredlogs
dev_requires =
    pylint
    black
    docformatter
    ipython
python_requires = >=3.9
    
[options.entry_points]
console_scripts =
    pdf2fgu = scripts.pdf2fgu:cli
